--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
-#library(morrowplots)
+library(morrowplots)
 ```
 
 **Don't worry if you don't know anything about agriculture.**
