test update to README

--- a/README.Rmd
+++ b/README.Rmd
@@ -26,7 +26,7 @@ You can install the development version of morrowplots from [GitHub](https://git
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("1heidi/morrowplots")
+devtools::install_github("SandiCal/morrowplots")
 ```
 
 ## Example
