--- a/README.Rmd
+++ b/README.Rmd
@@ -57,10 +57,25 @@ The codebook that describes all variables is available in the help documentation
 help(morrowplots)
 ```
 
-```{r, echo = F}
-helpfile <- utils:::.getHelpFile(help(morrowplots))
-outfile <- tempfile(fileext = ".html")
-tools:::Rd2HTML(helpfile, out =outfile)
-rawHTML <- paste(readLines(outfile), collapse="\n")
-knitr::asis_output(htmltools::htmlPreserve(rawHTML))
+```{r, echo = F, results = "asis"}
+help_console <- function(topic, format=c("text", "html", "latex", "Rd"),
+                         lines=NULL, before=NULL, after=NULL) {  
+  format=match.arg(format)
+  if (!is.character(topic)) topic <- deparse(substitute(topic))
+  helpfile = utils:::.getHelpFile(help(topic))
+  hs <- capture.output(switch(format, 
+                              text=tools:::Rd2txt(helpfile),
+                              html=tools:::Rd2HTML(helpfile),
+                              latex=tools:::Rd2latex(helpfile),
+                              Rd=tools:::prepare_Rd(helpfile)
+                              )
+                      )
+  if(!is.null(lines)) hs <- hs[lines]
+  hs <- c(before, hs, after)
+  cat(hs, sep="\n")
+  invisible(hs)
+}
+
+help_console(morrowplots, "html", lines = 38:100)
 ```
+
